--- a/main.css
+++ b/main.css
@@ -1,172 +1,186 @@
 * {
-    box-sizing: border-box;
-  }
-  
+  box-sizing: border-box;
+}
+
 body {
-    font-family: "Open Sans",
-    sans-serif; 
-    line-height: 1.5;
-    
-    }
-h1,h2,h3,h4{
-    font-family: 'Montserrat', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+  margin: 0;
 }
-.h1 { 
-    font-size: 2em;
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Montserrat", sans-serif;
 }
-section h1, section h2, section p{
-    max-width: 660px;
+.h1 {
+  font-size: 2em;
+}
+section h1,
+section h2,
+section p {
+  max-width: 660px;
+  margin-left: auto;
+  margin-right: auto;
+}
+section p {
+  font-family: "Cardo", sans-serif;
+}
+.name {
+  color: white;
+  justify-self: start;
+  flex: 1;
+  align-self: center;
+}
+.links {
+  flex: 1;
+  text-align: right;
+}
+#page-nav {
+  display: flex;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  background: black;
+  padding: 5px 10px;
+}
+#page-nav label,
+#hamburger {
+  display: none;
+}
+#page-nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+}
+#page-nav ul li {
+  display: inline-block;
+  padding: 10px;
+  position: relative;
+}
+#page-nav ul li a:hover {
+  color: white;
+}
+#page-nav ul li a {
+  color: mediumspringgreen;
+  text-decoration: none;
+}
+#page-nav ul li a::before {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 0%;
+  background-color: white;
+  top: 0;
+}
+#page-nav ul li a:hover::before {
+  width: 100%;
+  transition: all ease-in-out 300ms;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+  padding: none;
+}
+.project1Img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-radius: 5px;
+  border: 2px solid black;
+}
+.linkColor {
+  color: #3f8abf;
+  font-weight: bold;
+}
+/* Mobile and tablet users */
+@media screen and (min-width: 827px) {
+  #contacts {
+    text-align: center;
+    text-decoration: none;
+    background: black;
+    color: white;
+    list-style: none;
+  }
+  #contacts ul li {
+    list-style: none;
+  }
+  #contacts li a {
+    text-decoration: none;
+    color: white;
+  }
+  .backUp {
+    text-decoration: none;
+    color: #3f8abf;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
+  }
+  .projectTitle {
+    text-align: center;
+  }
+  .project {
+    max-width: 760px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
- section p{
-    font-family: 'Cardo',sans-serif;
-}
-.name{
-    color:white;
-    justify-self: start;
-    flex:1;
-    align-self: center;
-}    
-.links{
-    flex:1;
-    text-align: right;
-}
-#page-nav{
-    display: flex; 
-    width: 100%;
-    position: sticky;
-    top: 0;
-    background: black;
-    padding: 5px 10px;
-}
-#page-nav label, #hamburger{
-    display:none;
-    
-}
-#page-nav ul{
-    list-style-type: none;
-    margin:0;
-    padding: 0;
-}
-#page-nav ul li{
+
+/* Mobile and tablet users */
+@media screen and (max-width: 826px) {
+  #page-nav label {
     display: inline-block;
+    color: white;
+    font-style: normal;
+    font-size: 30px;
     padding: 10px;
-    
-}
-#page-nav ul li a{
-    color:mediumspringgreen;
-    text-decoration: none;
-}
-img{
+  }
+  #page-nav ul li {
     display: block;
-    margin-left:auto;
-    margin-right:auto;
-    width: 30%;
-    padding: none;   
-
-}
-.project1Img{
+  }
+  #page-nav ul li {
+    border-top: 1px solid black;
+  }
+  #page-nav ul {
+    display: none;
+  }
+  #page-nav input:checked ~ ul {
     display: block;
-    margin-left:auto;
-    margin-right:auto;
-    width: 100%;
-    border-radius: 5px;
-    border:2px solid black;
-}
-.linkColor{
-    color:#3F8ABF;
-    font-weight: bold;
-}
-/* Mobile and tablet users */
-@media screen and (min-width: 681px){
-    #contacts{
-        text-align: center; 
-        text-decoration: none;
-        background: black;
-        color:white;
-        list-style: none;
-    }
-    #contacts ul li{
-        list-style: none;
-        
-    }
-    #contacts li a{
-        text-decoration: none;
-        color:white;
-        
-    }
-    .backUp{
-        text-decoration: none;
-        color:#3F8ABF;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }
-    .portfolioTitle{
-        text-align: center;
-    }
-    .project1{
-        max-width: 760px;
-        margin-left: auto;
-        margin-right: auto;
-
-    }
-}
- 
-/* Mobile and tablet users */
-@media screen and (max-width: 680px){
-    #page-nav label{
-        display: inline-block;
-        color:white;
-        font-style: normal;
-        font-size: 30px;
-        padding: 10px;
-    }
-    #page-nav ul li{
-        display: block;
-    }
-    #page-nav ul li{
-        border-top: 1px solid black;
-    }
-    #page-nav ul{
-        display: none;
-    }
-    #page-nav input:checked ~ ul{
-        
-        display: block;
-    }
-.intro{
+  }
+  .intro {
     text-align: center;
-}
-.portfolioTitle{
+  }
+  .portfolioTitle {
     text-align: center;
-}
-p{
+  }
+  p {
     padding-top: 15px;
     line-height: 24px;
-}
-#contacts{
-    text-align: left; 
+  }
+  #contacts {
+    text-align: left;
     text-decoration: none;
     background: black;
-    color:white;
+    color: white;
     list-style: none;
-}
-#contacts ul li{
+  }
+  #contacts ul li {
     list-style: none;
-    
-}
-#contacts li a{
+  }
+  #contacts li a {
     text-decoration: none;
-    color:white;
+    color: white;
     text-align: center;
-}
+  }
 
-.backUp{
+  .backUp {
     text-decoration: none;
-    color:#3F8ABF;
+    color: #3f8abf;
     text-align: center;
+  }
 }
-    
-}    
