--- a/main.css
+++ b/main.css
@@ -34,26 +34,39 @@ section p {
 section p {
   font-family: "Cardo", sans-serif;
 }
+/* .burger {
+  position: absolute;
+  right: 0;
+  top: 0;
+} */
 .navIntro {
   margin-bottom: 20px;
+  border: solid blue;
 }
 .name {
-  color: white;
+  color: greenyellow;
   justify-self: start;
   flex: 1;
   align-self: center;
 }
 .links {
   flex: 2;
-  text-align: right;
+  list-style-type: none;
+  border: solid greenyellow;
+  z-index: 1;
+  padding: 0;
+  text-align: center;
+  font-size: 10px;
 }
 #page-nav {
   display: flex;
-  width: 100%;
-  position: sticky;
+  flex-direction: column;
+  position: absolute;
+  right: 0;
+  width: 80px;
   top: 0;
   background: black;
-  padding: 5px 10px;
+  text-align: right;
 }
 
 #page-nav label {
@@ -67,11 +80,10 @@ section p {
 #hamburger {
   display: none;
 }
-#page-nav ul li {
-  display: block;
-}
+
 #page-nav ul li {
   border-top: 1px solid black;
+  padding: 10px;
 }
 a {
   color: white;
@@ -80,7 +92,7 @@ a {
   display: none;
 }
 #page-nav input:checked ~ ul {
-  display: block;
+  display: inline-block;
 }
 
 img {
